// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusTags:  case: 1 1`] = `
<Tag
  color="red"
/>
`;

exports[`StatusTags:  case: 2 1`] = `
<Tag
  color="red"
>
  Validation error
</Tag>
`;

exports[`StatusTags:  case: 3 1`] = `
<Tag
  color="red"
>
  System error
</Tag>
`;

exports[`StatusTags:  case: 4 1`] = `
<Tag
  color="red"
>
  Decompression error
</Tag>
`;

exports[`StatusTags:  case: 5 1`] = `
<Tag
  color="red"
>
  Duplicate batch
</Tag>
`;

exports[`StatusTags:  case: 6 1`] = `
<Tag
  color="red"
>
  Empty batch
</Tag>
`;
